objects/Job_Type_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Back_to_Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back to Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_Assist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drivers Assist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>To indicate whether this setting belongs to Test Drive or Evaluation</description>
        <label>Object Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_tag__c</fullName>
        <label>Resource tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_from_Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start from Hub</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Type Settings</label>
</CustomObject>